added what i do section

--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,8 @@ body{
     font-family: 'Open Sans', sans-serif;
 }
 .header{
-    background-image: linear-gradient(to right, #fc5c7d, #6a82fb);
+    background: #FFF8F3;
+    
 }
 nav{
     display: flex;
@@ -59,9 +60,13 @@ img{
 height: 676px;
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
     
 }
 .gretting{
@@ -81,3 +86,119 @@ line-height: normal;
 .para{
     margin-bottom: 15px;
 }
+.content{
+    max-width: 500px;
+}
+main{
+    max-width: 1140px;
+    margin: 0px auto;
+}
+.about{
+   
+    margin: 130px 0px;
+    padding: 130px;
+    border-radius: 10px;
+    background-color: #ffbe90;
+
+}
+.section-tittle{
+    color:  #000000;
+text-align: center;
+font-size: 35px;
+font-weight: 700;
+margin-bottom: 20px;
+
+}
+.section-des{
+    color:  #757575;
+text-align: center;
+font-size: 18px;
+font-weight: 400;
+margin-bottom: 20px;
+
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+  
+}
+
+.aboutinfo{
+    
+color:  #757575;
+text-align: center;
+
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+
+
+}
+.aboutdes{
+
+color:  #474747;
+font-size: 20px;
+font-style: normal;
+font-weight: 700;
+line-height: 30px;
+}
+
+
+/* what-i-do-section */
+.what-i-do-tittle{
+    text-align: center;
+    color: #181818;
+
+font-size: 35px;
+font-style: normal;
+font-weight: 700;
+
+}
+#ido-des{
+    padding: 30px 150px;
+    text-align: center;
+    color:  #757575;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+}
+.skill-images{
+    height: 50px;
+    width: 50px;
+}
+.skill-description{
+    width: 150px;
+    color:  #757575;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+
+
+}
+.skill-container{
+    display: flex;
+    gap: 40px;
+    margin-top: 50px;
+    
+    
+}
+.skill-tittle{
+    color:  #181818;
+font-size: 20px;
+font-style: normal;
+font-weight: 700px;
+max-width: 1140px;
+margin-top: 20px;
+margin-bottom: 20px;
+
+}
+.skillinfo{
+padding: 30px;
+width: 200px;
+height: 377px;
+flex-shrink: 0;
+border-radius: 5px;
+background: #FFF;
+box-shadow: 0px 6px 50px 0px rgba(241, 100, 13, 0.86);
+}
+
