--- a/style/style.css
+++ b/style/style.css
@@ -1,204 +1,270 @@
-*{
-    margin: 0px;
-    padding: 0px;
+* {
+  margin: 0px;
+  padding: 0px;
 }
-body{
-    font-family: 'Open Sans', sans-serif;
+body {
+  font-family: "Open Sans", sans-serif;
 }
-.header{
-    background: #FFF8F3;
-    
+.header {
+  background: #fff8f3;
 }
-nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 20PX;
-    padding: 10px 200px;
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 20px;
+  padding: 10px 200px;
 }
- nav > ul{
-    display: flex;
+nav > ul {
+  display: flex;
+}
+ul li {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+}
+.nav-title {
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+}
+.primary-color {
+  color: #fd6e0a;
+}
+.primary-btn {
+  border-radius: 5px;
+  background: #fd6e0a;
+  border: none;
+  padding: 15px 15px;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  color: white;
+}
+nav li {
+  list-style: none;
+  margin-right: 20px;
+}
+nav a {
+  text-decoration: none;
+  color: black;
+}
+img {
+  width: 584px;
+  height: 676px;
+}
+.banner {
+  padding: 30px 30px 0px 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-image: url(../images/header_bg.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
+.gretting {
+  margin-bottom: 10px;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.banner-tittle {
+  margin-bottom: 10px;
+  font-size: 85px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.para {
+  margin-bottom: 15px;
+}
+.content {
+  max-width: 500px;
+}
+main {
+  max-width: 1140px;
+  margin: 0px auto;
+}
+.about {
+  margin: 130px 0px;
+  padding: 130px;
+  border-radius: 10px;
+  background-color: #ffbe90;
+}
+.section-tittle {
+  color: #000000;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.section-des {
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+.about-info-container {
+  display: flex;
+  justify-content: space-around;
+}
 
-      
-}
- ul li{
-    display: flex;
-    align-items: center;
-    padding: 20px;
-}
-.nav-title{
-    font-size: 45px;
-font-style: normal;
-font-weight: 800;
-line-height: normal;
-}
-.primary-color{
-    color: #FD6E0A;
-    
-}
-.primary-btn{
-    border-radius: 5px;
-background: #FD6E0A;
-border:none;
-padding: 15px 15px;
-font-size: 20px;
-font-style: normal;
-font-weight: 600;
-color: white;
-}
-nav li{
-    list-style: none;
-    margin-right: 20px;
-    
-}
-nav a{
-    text-decoration: none;
-    color: black;
-}
-img{
-    width: 584px;
-height: 676px;
-}
-.banner{
-    padding: 30px 30px 0px 150px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-image: url(../images/header_bg.png);
-    background-repeat: no-repeat;
-    background-position: bottom right;
-    
-}
-.gretting{
-    margin-bottom: 10px;
-    font-size: 45px;
-font-style: normal;
-font-weight: 600;
-line-height: normal;
-}
-.banner-tittle{
-    margin-bottom: 10px;
-    font-size: 85px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-}
-.para{
-    margin-bottom: 15px;
-}
-.content{
-    max-width: 500px;
-}
-main{
-    max-width: 1140px;
-    margin: 0px auto;
-}
-.about{
-   
-    margin: 130px 0px;
-    padding: 130px;
-    border-radius: 10px;
-    background-color: #ffbe90;
+.aboutinfo {
+  color: #757575;
+  text-align: center;
 
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
 }
-.section-tittle{
-    color:  #000000;
+.aboutdes {
+  color: #474747;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+}
+
+/* what-i-do-section */
+.what-i-do-tittle {
+  text-align: center;
+  color: #181818;
+
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 700;
+}
+#ido-des {
+  padding: 30px 150px;
+  text-align: center;
+  color: #757575;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+}
+.skill-images {
+  height: 50px;
+  width: 50px;
+}
+.skill-description {
+  width: 150px;
+  color: #757575;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+}
+.skill-container {
+  display: flex;
+  gap: 40px;
+  margin-top: 50px;
+}
+.skill-tittle {
+  color: #181818;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700px;
+  max-width: 1140px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.skillinfo {
+  padding: 30px;
+  width: 200px;
+  height: 377px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(241, 100, 13, 0.86);
+}
+
+/* Resume css Started Here */
+
+.section-title {
+  padding-top: 130px;
+  padding-bottom: 30px;
+  color:  #181818;
 text-align: center;
+font-family: Open Sans;
 font-size: 35px;
-font-weight: 700;
-margin-bottom: 20px;
+
+font-weight: 700px;
 
 }
-.section-des{
-    color:  #757575;
-text-align: center;
-font-size: 18px;
-font-weight: 400;
-margin-bottom: 20px;
+.resume-container{
+  display: flex;
+  gap: 50px;
+}
+.resume-item-title {
+  color: #474747;
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.resume-item-institute {
+  margin-bottom: 20px;
+  margin-top: 0px;
+}
+
+.resume-item-institute,
+.resume-item-description {
+  color: #757575;
+}
+
+.resume-container hr {
+  margin: 30px;
+}
+
+.download-cv {
+  text-align: center;
+  margin-top: 50px;
+}
+
+footer {
+  display: flex;
+  gap: 100px;
+  background: #FFF8F3;
+  margin-top: 100px;
+  padding: 130px 200px;
+}
+
+.footer-column {
+  width: 50%;
+  
+}
+.section-description{
+  margin-left: 255px;
 
 }
-.about-info-container{
-    display: flex;
-    justify-content: space-around;
+
+
+
+.social-links a{
+  position: relative;
+  left: 250px;
+  top: 30px;
+
   
 }
 
-.aboutinfo{
-    
-color:  #757575;
-text-align: center;
+.contact input[type="text"], .contact input[type="email"],
 
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-
-
+textarea {
+  display: block;
+  margin-bottom: 25px;
+  padding: 18px 35px;
+  color: #757575;
+  border-radius: 5px;
+  background: #FFF;
+  border: 0;
+  width: 100%;
 }
-.aboutdes{
-
-color:  #474747;
-font-size: 20px;
-font-style: normal;
-font-weight: 700;
-line-height: 30px;
-}
-
-
-/* what-i-do-section */
-.what-i-do-tittle{
-    text-align: center;
-    color: #181818;
-
-font-size: 35px;
-font-style: normal;
-font-weight: 700;
-
-}
-#ido-des{
-    padding: 30px 150px;
-    text-align: center;
-    color:  #757575;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-}
-.skill-images{
-    height: 50px;
-    width: 50px;
-}
-.skill-description{
-    width: 150px;
-    color:  #757575;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-
-
-}
-.skill-container{
-    display: flex;
-    gap: 40px;
-    margin-top: 50px;
-    
-    
-}
-.skill-tittle{
-    color:  #181818;
-font-size: 20px;
-font-style: normal;
-font-weight: 700px;
-max-width: 1140px;
-margin-top: 20px;
-margin-bottom: 20px;
-
-}
-.skillinfo{
-padding: 30px;
-width: 200px;
-height: 377px;
-flex-shrink: 0;
-border-radius: 5px;
-background: #FFF;
-box-shadow: 0px 6px 50px 0px rgba(241, 100, 13, 0.86);
+.social-links a > img{
+  height: 50px;
+  width: 50px;
+  
 }
 
